<resources>
    <string name="app_name">INFUS</string>
    <string name="silahkan_login">Silahkan Login dengan menggunakan Nomor induk Pegawai anda</string>
    <string name="judul">Rancang Bangun Prototype Pemantauan Cairan Infus Berbasis Internet of Things (IoT)</string>
    <string name="gambar">gambar</string>
    <string name="data_pemantauan_cairan_infus">Data Pemantauan Cairan Infus</string>
    <string name="gambar_infus">gambar infus</string>
    <string name="pilih_mode">Tolong Input TPM sesuai Kebutuhan Pasien</string>
    <string name="makro">MAKRO</string>
    <string name="mikro">MIKRO</string>
    <string name="halo">Halo,</string>
    <string name="alamat">Alamat : </string>
    <string name="foto_user">foto user</string>
    <string name="faktor_tetes">Faktor tetes : /ml</string>
    <string name="jumlah_cairan">Jumlah Cairan (ml) :</string>
    <string name="status_cairan">Status Cairan :</string>
    <string name="waktu_jam">Waktu dalam hitungan menit :</string>
</resources>
