<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Input sesuai kebutuhan pasien"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/cv_infus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_item_tetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faktor_tetes"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_faktor_tetes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/kotak_login"
            android:hint="20"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_item_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/jumlah_cairan"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_jumlah_ml"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/kotak_login"
            android:hint="500"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack" />


        <TextView
            android:id="@+id/tv_item_batas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/waktu_jam"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_waktu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/kotak_login"
            android:hint="100"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:text="Hitung"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>